fix: text overflow clamp issue

--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -5,29 +5,36 @@
     background-color: #fff;
     width: 15rem;
 }
+
 .card .ticket-id {
     color: #6b6f76;
     font-size: 0.6rem;
     font-weight: bold;
 }
+
 .card .title {
-    display: inline-block;
+    /* display: inline-block; */
     color: #282a2f;
     font-size: 0.75rem;
     font-weight: bold;
-    text-overflow: ellipsis;
-    height: 5ch;
+    /* text-overflow: ellipsis; */
+    /* height: 5ch; */
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
     overflow: hidden;
     /* -webkit-line-clamp: 1;
     -webkit-box-orient: horizontal; */
     /* white-space: nowrap; */
 }
+
 .card .middle-container {
     display: flex;
     flex-direction: row;
     gap: 0.5rem;
     margin-top: 0.5rem;
 }
+
 .card .bottom-container {
     gap: 0.5rem;
     display: flex;
@@ -35,6 +42,7 @@
     flex-wrap: wrap;
     margin-top: 0.5rem;
 }
+
 .card .tag-container {
     display: flex;
     flex-direction: row;
@@ -44,12 +52,14 @@
     border-radius: 0.25rem;
     padding: 0.25rem 0.5rem;
 }
+
 .card .tag-icon {
     background-color: #bec2c8;
     border-radius: 9999px;
     height: 0.75rem;
     width: 0.75rem;
 }
+
 .card .tag-text {
     color: #6b6f76;
     font-size: 0.75rem;
@@ -68,7 +78,7 @@
     place-items: center;
     border: 1px solid #edeff2;
     border-radius: 0.25rem;
-    padding: 0.25rem 0.5rem;   
+    padding: 0.25rem 0.5rem;
 }
 
 .card svg {
